Restyle coverstory headline, fix headerlink stuff

--- a/ubyssey/static_src/src/styles/modules/article/_embeds.scss
+++ b/ubyssey/static_src/src/styles/modules/article/_embeds.scss
@@ -466,6 +466,5 @@ hr.page-break{
   line-height: 2rem;
   margin-top: 0.1em;
   margin-right: 0.08em;
-  margin-bottom: 0.08em;
   float: left;
 }
